# mnist

./: .gitignore  Dockerfile  MANIFEST.in  ml-work-cronjob  pyproject.toml  run.sh  rundb.sh
note/: mnist_model.ipynb
src/mnist/: Dockerfile  db.py  main.py  worker.py
src/mnist/utils/: db.py  predict.py  util.py
