[project]
name = "mnist"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "rlaehgus97", email = "starkim625@gmail.com"},
]
dependencies = [
    "pymysql>=1.1.1",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.6",
    "pytz>=2024.2",
    "keras>=3.5.0",
    "tensorflow>=2.17.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]

[tool.pytest.ini_options]
pythonpath = "src"
